# ft8ping

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/ft8ping/: c28.py  ft8ping.py  h.py  hashcodes.py  std_call_to_c28.py
test/: test_ft8ping.py  test_hashcodes.py  test_sample.py  test_std_call_to_c28.py
