[project]
name = "ft8ping"
version = "0"
readme = "README.md"
description = "ICMP over FT8"
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.6.1",
    "structlog",
]

[project.scripts]
hashcodes = "ft8ping.hashcodes:main"
std_call_to_c28 = "ft8ping.std_call_to_c28:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.coverage.html]
show_contexts = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
	"F",  # pyflakes
	"E", "W",  # pycodestyle
	"C90",  # mccabe
	"I",  # isort
	"N",  # pep8-naming
	"UP",  # pyupgrade
	"B",  # flake8-bugbear
	"INP",  # flake8-no-pep420
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "mypy",
    "pytest",
    "ruff",
]
